--- a/views/table.haml
+++ b/views/table.haml
@@ -4,7 +4,8 @@
 %script(src="/js/table.js")
 %link(rel="stylesheet" type="text/css" href="css/table.css")
 %body
-  %h1 Scan Report
+  %h1 ARPScan Report
+  %hr
   %h2 Scan Metadata:
   %table{:id => "infoTable", :class => "basic"}
   %p
