configuration of multiple cans now works

--- a/views/table.haml
+++ b/views/table.haml
@@ -2,7 +2,7 @@
 %script(src="/js/jquery.tablesorter.min.js")
 %script(src="/js/jsonTable.js")
 %script(src="/js/table.js")
-%link(rel="stylesheet" type="text/css" href="css/table.css")
+%link(rel="stylesheet" type="text/css" href="/css/table.css")
 %body
   %h1 ARPScan Report
   %hr
