added ipaddress plugin for datatables

--- a/views/table.haml
+++ b/views/table.haml
@@ -1,5 +1,6 @@
 %script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
 %script(src="//cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js")
+%script(src="//cdn.datatables.net/plug-ins/725b2a2115b/sorting/ip-address.js")
 %script(src="/js/table.js")
 %link(rel="stylesheet" type="text/css" href="/css/table.css")
 %title wARPscan
