tooltips kinda working

--- a/views/table.haml
+++ b/views/table.haml
@@ -4,6 +4,7 @@
 %script(src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js")
 %script(src="/js/table.js")
 %link(rel="stylesheet" type="text/css" href="/css/table.css")
+%link(rel="stylesheet" type="text/css" href="/css/jquery-ui.css")
 %title wARPscan
 %a{:href => "/"}
   %h1 wARPscan
