--- a/views/scans.haml
+++ b/views/scans.haml
@@ -1,5 +1,5 @@
 %script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
--# %link(rel="stylesheet" type="text/css" href="/css/scans.css")
+%link(rel="stylesheet" type="text/css" href="/css/scans.css")
 %title wARPscan
 %a{:href => "/"}
   %h1 wARPscan
