--- a/views/table.haml
+++ b/views/table.haml
@@ -1,10 +1,10 @@
 %script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js")
 %script(src="//cdn.datatables.net/1.10.2/js/jquery.dataTables.min.js")
 %script(src="//cdn.datatables.net/plug-ins/725b2a2115b/sorting/ip-address.js")
-%script(src="https://code.jquery.com/ui/1.11.1/jquery-ui.min.js")
+%script(src="/js/jquery.qtip.min.js")
 %script(src="/js/table.js")
 %link(rel="stylesheet" type="text/css" href="/css/table.css")
-%link(rel="stylesheet" type="text/css" href="/css/jquery-ui.css")
+%link(rel="stylesheet" type="text/css" href="/css/jquery.qtip.min.css")
 %title wARPscan
 %a{:href => "/"}
   %h1 wARPscan
